[package]
name = "scoringengine-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
yew = { version = "0.20", features = ["csr"] }
