[package]
name = "scoringengine-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-storage = "0.3.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Document", "Range", "Window", "Selection"] }
yew = { version = "0.21", features = ["csr"] }
